fixed alignment

--- a/source/components/Dashboard/Dashboard.scss
+++ b/source/components/Dashboard/Dashboard.scss
@@ -25,7 +25,7 @@
 
 #cards-container {
     display: flex;
-    justify-content: center;
+    justify-content: center !important;
 	margin: 0 auto 0 auto !important;
 }
 
